Modified/Retail_Paymaent section